# tira-labra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py  timer_results.txt
.github/workflows/: main.yml
dokumentaatio/: kayttoohjeet.md  maarittelydokumentti.md  testausdokumentti.md  timer_results.txt  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md  viikkoraportti7.md
maps/: AR0011SR.map  AR0012SR.map  AR0203SR.map  AR0400SR.map  AR0511SR.map  AR0516SR.map  AR0700SR.map  AR0711SR.map  ca_caverns1_mines.map  dijkstra_wins.map  dr_0_deeproads.map  empty-100.map  empty-140.map  empty-200.map  ht_store.map  huge.map  ida_wins.map  lt_foundry_n.map  lt_gallowsprison_n.map  maze-101-near.map  maze-101.map  maze-11.map  maze-15-straight.map  maze-15.map  pillars-100.map  pillars-140.map  pillars-200.map  pillars-22.map  pillars-23.map  pillars-24.map  pillars-260.map  pillars-maze-260.map  test.map  w_sundermount.map
src/: main.py  test_maps.py
src/entities/: cell.py  graph.py  grid.py  history.py  jps_graph.py  jps_node.py  node.py
src/repositories/: map_repository.py
src/services/: algorithm.py  dijkstra.py  distance.py  heap.py  ida_star.py  jps.py  math_utils.py  timer.py  timer_service.py  timing_service.py
src/tests/entities/: cell_test.py  graph_test.py  grid_test.py  history_test.py  jps_node_test.py  node_test.py
src/tests/services/: dijkstra_test.py  djikstra_test.py  heap_test.py  ida_star_test.py  (+5 more)
src/ui/: cell.py  grid.py  ui.py
