[tool.poetry]
name = "tira-labra"
version = "0.1.0"
description = ""
authors = ["Roni Tammisalo <81182631+rtammisalo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.1.0"
invoke = "^1.6.0"
memory-profiler = "^0.60.0"

[tool.poetry.dev-dependencies]
pygame = "^2.1.0"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
rope = "^0.21.1"
pylint = "^2.11.1"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
